--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+ 
     "start": "next start",
-    "lint": "next lint"
+    "netlify-dev": "netlify dev"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -15,9 +16,9 @@
     "@react-pdf/renderer": "^4.2.2",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
-    "firebase": "^11.3.1",
-    "framer-motion": "^12.4.5",
-    "mammoth": "^1.9.0",
+    "firebase": "^11.4.0",
+    "framer-motion": "^12.4.10",
+    "mammoth": "^1.8.0",
     "next": "^15.1.7",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
@@ -25,7 +26,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
