--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,11 @@
 [build]
-  command = "next build"
+  command = "npm install && next build && next export"
   publish = "out"
-  functions = "netlify/functions"
+
+[functions]
+  directory = "netlify/functions"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200  
