--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,4 @@
 [build]
-  command = "npm install && next build && next export"
+  command = "next build"
   publish = "out"
-
-[functions]
-  directory = "netlify/functions"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200  
+  functions = "netlify/functions"
